--- a/css/article.css
+++ b/css/article.css
@@ -158,8 +158,16 @@ article .title h4 {
   position: fixed;
   width: 20%;
 }
+.sidebar_title {
+  border-radius: 15px 15px 0px 0px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
 .sidebar h3 {
   text-align: center;
+}
+.sidebar .divider {
+  margin-top: 0px;
 }
 .sidebar ul {
   list-style-type: none;
