--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+ body {
+  background-color: #f8f8f8; /* White */
+ }
 .navbar {
   border: 0;
   border-radius: 0;
@@ -15,12 +18,18 @@ header img {
   margin: 0px auto;
   max-width: 250px;
 }
-header.about img{
-  padding: 55px 0px;
+.photo {
+  padding: 25px 0px;
 }
 .bg-header {
   background-color: #1abc9c; /* Turquoise */
   color: #ffffff;
+}
+.bg-sublime {
+  background-color: #585858; /* Grey like Sublime's background */
+}
+.bg-antisublime {
+  background-color: #f8f8f8; /* White */
 }
 .bg-python {
   /*background-color: #4aa02c;*/
@@ -40,6 +49,11 @@ header.about img{
 .bg-bash {
   /*background-color: #3d3c3a;*/
   background: rgba(61, 60, 58, 0.9); /* Iridium, 0.9 opacity */
+  color: #ffffff;
+}
+.bg-r {
+  /*background-color: #1e63f8;*/
+  background: rgba(30, 99, 248, 0.9); /* Ocean Blue 0.9 opacity */
   color: #ffffff;
 }
 .divider {
@@ -125,4 +139,16 @@ footer {
   font-size: 11px;
   background-color: #f8f8f8;
   text-align: center;
+}
+table {
+  border-radius: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+table th {
+  padding: 10px;
+}
+table img {
+  padding: 0px;
 }
